--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ Thumbs.db
 # Generated configs
 software/flight/sensors.yaml.bak
 
+# Python bytecode and caches
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.pytest_cache/
+
